[gd_scene load_steps=28 format=2]

[ext_resource path="res://src/Actors/Ninja.gd" type="Script" id=1]
[ext_resource path="res://assets/ninja/Run__001.png" type="Texture" id=2]
[ext_resource path="res://assets/ninja/Idle__008.png" type="Texture" id=3]
[ext_resource path="res://assets/ninja/Run__000.png" type="Texture" id=4]
[ext_resource path="res://assets/ninja/Run__002.png" type="Texture" id=5]
[ext_resource path="res://assets/ninja/Run__003.png" type="Texture" id=6]
[ext_resource path="res://assets/ninja/Run__005.png" type="Texture" id=7]
[ext_resource path="res://assets/ninja/Run__004.png" type="Texture" id=8]
[ext_resource path="res://assets/ninja/Idle__006.png" type="Texture" id=9]
[ext_resource path="res://assets/ninja/Idle__005.png" type="Texture" id=10]
[ext_resource path="res://assets/ninja/Idle__007.png" type="Texture" id=11]
[ext_resource path="res://assets/ninja/Idle__009.png" type="Texture" id=12]
[ext_resource path="res://assets/ninja/Run__009.png" type="Texture" id=13]
[ext_resource path="res://assets/ninja/Idle__004.png" type="Texture" id=14]
[ext_resource path="res://assets/ninja/Idle__000.png" type="Texture" id=15]
[ext_resource path="res://assets/ninja/Idle__001.png" type="Texture" id=16]
[ext_resource path="res://assets/ninja/Idle__002.png" type="Texture" id=17]
[ext_resource path="res://assets/ninja/Idle__003.png" type="Texture" id=18]
[ext_resource path="res://assets/ninja/Run__008.png" type="Texture" id=19]
[ext_resource path="res://assets/ninja/Run__006.png" type="Texture" id=20]
[ext_resource path="res://assets/ninja/Run__007.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "fadein",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 13 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "show"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 147.104, 218.902 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 77.698, 30 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 126.9, 225.636 )

[node name="Ninja" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.4505, -232.143 )
frames = SubResource( 1 )
animation = "fadein"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/FadeIn = SubResource( 5 )
anims/show = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.48987, -231.395 )
shape = SubResource( 2 )

[node name="StompArea2D" type="Area2D" parent="."]
position = Vector2( 0, -320 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea2D"]
shape = SubResource( 3 )

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 62.858, -233.64 )
shape = SubResource( 4 )
[connection signal="animation_finished" from="AnimatedSprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="StompArea2D" to="." method="_on_StompArea2D_area_entered"]
[connection signal="body_entered" from="StompArea2D" to="." method="_on_StompArea2D_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
